Ensure product footer aligns with flip container at all widths.

--- a/app/assets/stylesheets/_spree_store_overrides.scss
+++ b/app/assets/stylesheets/_spree_store_overrides.scss
@@ -49,10 +49,24 @@
   }
 
   .product-footer {
+    width: 280px;
+    margin: 0 auto;
     padding: 15px 0;
     font-family: 'Karla', sans-serif;
     font-weight: bold;
     text-transform: uppercase;
+
+    @media screen and (min-width: $screen-sm-min) {
+      width: 350px;
+    }
+
+    @media screen and (min-width: $screen-md-min) {
+      width: 250px;
+    }
+
+    @media screen and (min-width: $screen-lg-min) {
+      width: 330px;
+    }
   }
 
   .product-type {
